@@ -30,10 +30,12 @@ Priorities:
   parameters. !!
 * Support embedding a Stage 1.5 in the "bootloader" area of a FFS
   partition. !!!
-* Add keyboard layout configuration support. !
-* Clean up and enhance the manuals, especially concept indexes. !!!
+* Clean up and enhance the manuals, especially indices. !!!
 * Add more filesystems support (XFS, NTFS, etc.)
 * Add remote console support (serial, parallel and net).
 * Add RAID support.
 * Complete the netboot support. !
 * Add automatic configuration support.
+* Add bunzip2 support.
+* Define the module system. !
+* Add ISA PnP support.
