@@ -14,7 +14,7 @@ New in 0.5.94:
 * A simple checker for the format of a Multiboot kernel, ``mbchk'', is
   added.
 * The command "find" searches for a filename in all devices and print
-  the list of the device which contain the file.
+  the list of the devices which contain the file.
 * The command "map" maps a drive to another drive so that we can
   chain-load some foolish operating systems (such as DOS) even if such
   an operating system resides at a non-first drive.
